--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,10 +1,11 @@
 {
-  "type": "postgres",
-  "host": "localhost",
-  "port": 5433,
-  "username": "postgres",
-  "password": "docker",
-  "database": "gostack_gobarber",
+  "type": "mysql",
+  "host": "device-management.c2gbi1gy4eg3.us-east-2.rds.amazonaws.com",
+  "port": 3306,
+  "username": "admin",
+  "password": "devicemanagement1721",
+  "database": "device-management",
+  "connectTimeout": 10000,
   "entities": [
     "./src/models/*.ts"
   ],
