--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "mysql": "^2.18.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.26",
+    "typeorm": "^0.2.31",
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
