--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "mysql": "^2.18.1",
