--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^6.10.0",
     "mysql": "^2.18.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
